added docker file

--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ DEV_PG_DB=gr
 DEV_PG_USER=postgres
 DEV_PG_PASS=postgres
 DEV_PG_DIALECT=postgres
-DEV_PG_HOST=localhost
+#DEV_PG_HOST=localhost # if running locally
+DEV_PG_HOST=172.18.0.3 # if running on another docker container
 DB_TIMEZONE=+00:00
