--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DEV_PG_DB=gr
+DEV_PG_DB=gr # database name
 DEV_PG_USER=postgres
 DEV_PG_PASS=postgres
-DEV_PG_DIALECT=postgres
+DEV_PG_DIALECT=postgres # for postgresql
 #DEV_PG_HOST=localhost # if running locally
-DEV_PG_HOST=172.18.0.3 # if running on another docker container
+DEV_PG_HOST=172.18.0.3 # IP of the potgres host. in this case, this is running on another docker container
 DB_TIMEZONE=+00:00
